# whatsapp-radar

./: .env.example  .fleet.toml  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  launcher.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  tray.bat  webapp.bat  webapp_tunnel_named.bat  wr.bat
app/: __init__.py
calendar_readonly/: __init__.py  core.py  google_client.py  oauth.py  smoke.py
config/: cloudflared.sample.yml  default.json  webapp_config.sample.json
docs/: architecture.mmd  bootstrapping.md  calendar-bootstrap.md  gmail-bootstrap.md  gmail-reuse.md  linked-device.md  manual.md  onboarding.md
gmail_readonly/: __init__.py  core.py  google_client.py  oauth.py
scripts/: __init__.py  auth_calendar.py  auth_gmail.py  gen_icons.py  gen_ssl_cert.py  gen_tailscale_cert.py  gen_token.py  run-e2e.ps1  run_named_tunnel.py  set_password.py  traffic_smoke.py  verify-before-ship.ps1
sidecar/: index.js  package-lock.json  package.json
src/: _loopback_http.py  config.py  models.py  runresult.py  speech_profile.py  static_versioning.py  subprocess_flags.py  tts_client.py  webapp_config.py  webauthn_gate.py
tests/: conftest.py  helpers.py  test_alert.py  test_audit_api.py  test_baseline_cursor.py  test_calendar_scan.py  test_cascade_classifier.py  test_chat_links.py  test_chats_config_api.py  test_config_family.py  test_config_overrides.py  test_config_telegram_layer.py  test_contract_validation.py  test_cursoring.py  test_dashboard_metrics.py  test_digest.py  test_execution_api.py  test_execution_runs.py  test_family_api.py  (+32 more)
(+154 files in other folders)
